fix: update hologram driver registration to use getDeclaredConstructor for instantiation